fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   height: 100%;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 /* Utility Classes*/
@@ -99,14 +100,14 @@ p {
   box-sizing: border-box;
 }
 .header {
-  height: 50rem auto;
+  height: 55rem auto;
   width: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
 }
 #nav {
-  margin-inline: 4rem;
+  margin-inline: 10rem;
   height: 5rem;
   display: flex;
   justify-content: space-between;
@@ -133,7 +134,7 @@ p {
   background: hsl(256, 26%, 20%);
 }
 .hero {
-  height: 28rem;
+  height: 35rem;
   position: relative;
   display: flex;
   padding-inline: 2rem;
@@ -160,29 +161,30 @@ p {
 }
 .card {
   height: 20rem;
-  width: 27rem;
+  width: 40%;
   display: block;
   position: relative;
-  padding: 1rem;
+  padding-top: 2rem;
 }
 .line {
   height: 0.05rem;
   width: 8rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.7rem;
   background-color: white;
 }
 .heading {
   margin: 0;
-  font-size: 44px;
+  font-size: 64px;
 }
 .card-p {
   font-size: 13px;
   word-spacing: 0.1rem;
   line-height: 1.3rem;
+  width: 70%;
 }
 .img {
-  height: 30rem;
-  width: 25rem;
+  height: 38rem;
+  width: 40%;
   background: url(/images/image-intro-desktop.jpg);
   background-position: center;
   background-size: cover;
@@ -398,14 +400,13 @@ p {
     justify-content: space-between;
     height: 60rem;
     max-width: 100%;
-    padding-inline: 1rem;
   }
   .hero::after {
     position: absolute;
     content: " ";
     height: 10.3rem;
     width: 10rem;
-    top: 50%;
+    top: 53%;
     left: 0;
     background: url(/images/bg-pattern-intro-left-mobile.svg);
   }
@@ -424,7 +425,7 @@ p {
     order: 2;
     text-align: center;
     padding-block: 3.5rem;
-    padding-inline: 2rem;
+    margin-top: 5rem;
   }
   .card .line {
     display: none;
